# ChangeLog for dev-ruby/after_commit
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*after_commit-1.0.5 (06 Dec 2009)

  06 Dec 2009; Hans de Graaff <graaff@gentoo.org>
  +after_commit-1.0.5.ebuild, +metadata.xml:
  Initial import, dependency of thinking_sphinx.
