@@ -2,13 +2,15 @@
 Hash: SHA1
 
 DIST after_commit-1.0.5.gem 8192 RMD160 3cade41a972ad2d7cbc6b4f61888192257b1ec9e SHA1 1531248137b0c33ce7c922e3a03dc1d34316e649 SHA256 85f3490ee1bc36109b9e99ca79ba0c4102c7ccadf8ace06291bb99b0be3db9dd
+DIST after_commit-1.0.6.gem 8192 RMD160 fd950b3570674c64213c668261aa16e253b8eb4e SHA1 66189a20abe5ce6a6c180c19ff4082ce57e00802 SHA256 b0df8a49574565d99beaf4763e9e1e011240f805cee5afd4434131da8ac8fa68
 EBUILD after_commit-1.0.5.ebuild 527 RMD160 7996cdc0a838ac40d5b7a9a356c17621367f8cf3 SHA1 5677081c1dbd1102be79d82eb29fce2614e142e4 SHA256 bd2feefab1565b0f9896ab5ada6e2097cf8125009baa76d67a02b13007baa353
-MISC ChangeLog 302 RMD160 012ece838680dc37ea9f9a5c3237700ff79b2e4b SHA1 294974047db114240fb555673cffcd24191a6290 SHA256 40917b7405171d1c0fbc02746c1be8613b3a049c299f7fc7e207c913e9f8be90
+EBUILD after_commit-1.0.6.ebuild 740 RMD160 5f94ed78c469bdfc74a75e19348451258b91c34d SHA1 3cfce611cfaf5ebcc62d2b5a3b35cdf38451de96 SHA256 5ff7fe5ba7ef109f2fbe8620c99ecb4fdf38734585a3177e6e1509a6b35b6e7b
+MISC ChangeLog 459 RMD160 b12a64999ba8b522987987e120fe23e897366ac6 SHA1 d8a54df5fe10e2e05476339d0eef1c2d845ee4bb SHA256 3fda9fdc012db561b77a57447eadf48da6e4a82a794b18f296770df59d856b5b
 MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.11 (GNU/Linux)
+Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAksbkSUACgkQVYU2Ai8K93cXJgCgy5v1De/n65oqypDmGdnEFfit
-uLAAn0E/4ul4zjmrQD0unC2C9FkB/Jl9
-=zk71
+iEYEARECAAYFAkt+QGMACgkQeM7EJeUH71NDrACgkOcYYm+CM3EoM74cwe/deK0L
+IYgAn0BYfhiUa6tEHQCGLF/f/+xUTlX4
+=VnRi
 -----END PGP SIGNATURE-----
