@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/after_commit
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*after_commit-1.0.6 (19 Feb 2010)
+
+  19 Feb 2010; Hans de Graaff <graaff@gentoo.org>
+  +after_commit-1.0.6.ebuild:
+  Version bump. Convert to ruby-fakegem.
 
 *after_commit-1.0.5 (06 Dec 2009)
 
